feat(suite): confirm bundle preview atomically
Signed-off-by: Codex <codex@openai.com>
Signed-off-by: XiaoSeS <87064762+XiaoSeS@users.noreply.github.com>